--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,10 @@ table, caption, tbody, tfoot, thead, tr, th, td,
     display: flex;
 }
 
+.header__logo {
+    padding: 2px 0 0 2px;
+}
+
 .header__logo__text {
     font-size: 22px;
     font-weight: 200;
@@ -60,7 +64,7 @@ table, caption, tbody, tfoot, thead, tr, th, td,
 }
 
 .header__localization {
-    margin-left: 65px;
+    padding: 2px 0 0 64px;
 }
 
 .button-text {
@@ -70,7 +74,7 @@ table, caption, tbody, tfoot, thead, tr, th, td,
     font-weight: 300;
     color: #ffffff80;
     cursor: pointer;
-    padding: 0 12px;
+    padding: 0 11px;
 }
 .button-text_active {
     color: #fff;
