--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,11 @@ td,
     margin: 0 auto;
 }
 
+.noscroll {
+    /* position: fixed; */
+    overflow-y:hidden;
+}
+
 /*---------------------------------- 
 -------------HEADER--------------
 ----------------------------------*/
@@ -143,6 +148,11 @@ td,
     flex-direction: row;
 }
 
+.socials_white {
+    color: white;
+    fill: white;
+}
+
 .socials__header {
     font-size: 13px;
 }
@@ -157,6 +167,11 @@ td,
     height: 2px;
     width: 68px;
     background-color: #000;
+    color: inherit;
+}
+
+.text-with-line_white:after {
+    background-color: #fff;
 }
 
 .socials__links {
@@ -177,6 +192,7 @@ td,
 
 .socials__svg-icon {
     width: 26px;
+    fill: inherit;
 }
 
 .socials__svg-icon_vk {
@@ -432,18 +448,37 @@ td,
     height: 100%;
     width: 100%;
     background-color: rgba(0, 0, 0, .87);
-    padding: 35px;
+    padding: 35px 35px 10px 35px;
+    color: #fff;
+    display: none;
+}
+
+.overlay_show {
+    display: block;
+}
+
+.overlay-content {
+    height: 100%;
+    max-width: 1450px;
+    margin: 0 auto;
+}
+
+.overlay__header {
+    width: 100%;
+    max-width: inherit;
+    position: relative;
+    top: 0;
+    padding-top: 18px;
+    line-height: 26px;
     color: #fff;
 }
 
-.overlay__close-block {
-    position: relative;
-    top: 0;
-    height: fit-content;
-    height: 20%;
+.overlay__footer {
     width: 100%;
-    display: flex;
-    flex-direction: row-reverse;
+    max-width: inherit;
+    position: fixed;
+    bottom: 0;
+    padding: 0 0 16px 0;
 }
 
 .close-btn {
@@ -459,12 +494,10 @@ td,
 .overlay__close-block {
     position: relative;
     top: 0;
-    height: fit-content;
-    height: 20%;
     width: 100%;
     display: flex;
     flex-direction: row-reverse;
-    padding: 15px 35px 0 0;
+    padding: 12px 41px 0 0;
 }
 
 .close-btn:before {
@@ -476,6 +509,7 @@ td,
     background-color: #fff;
     transform: rotate(45deg);
     left: 0;
+    top: 0;
 }
 .close-btn:after {
     content: "";
@@ -486,11 +520,16 @@ td,
     background-color: #fff;
     transform: rotate(-45deg);
     left: 0;
+    top: 0;
 }
 
 .overlay__menu {
     color: #e5e5e5;
-    padding: 4px 0 0 121px;
+    padding: 0 0 0 117px;
+}
+
+.overlay__menu__main-list {
+    padding-left: 4px;
 }
 
 .overlay__menu__item {
@@ -515,6 +554,10 @@ td,
 
 .big-link-text::first-letter {
     letter-spacing: 4px;
+}
+
+.overlay__menu__social {
+    padding-bottom: 18px;
 }
 
 .small-link-text {
