--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,17 @@
     src: url('./../fonts/GothamPro-Bold.ttf');
 }
 
+@font-face {
+    font-family: DinCondencedBold;
+    src: url('./../fonts/DinCondenced-Bold.otf');
+}
+
+@font-face {
+    font-family: GothamPro;
+    src: url('./../fonts/GothamPro.ttf');
+}
+
+
 * {
     font-family: Montserrat;
 }
@@ -620,14 +631,38 @@ td,
 }
 
 .link {
+    font-family: GothamProBold;
     text-decoration: none;
     font-size: 17px;
     font-weight: 300;
     color: #fff;
+    position: relative;
 }
 
-.s-main__right-block {
-    
+.link_with-triangle:after {
+    content: '';
+    position: absolute;
+    left: 127px;
+    top: 13px;
+    width: 0;
+    height: 0;
+    border-right: 4px solid #fff;
+    border-left: 9px solid transparent;
+    border-top: 4px solid transparent;
+    clear: both;
+    transform: rotate(-45deg);
+}
+
+.link_with-dots:after {
+    content: '';
+    position: absolute;
+    left: 94px;
+    top: 9px;
+    width: 9px;
+    height: 9px;
+    background: url(../img/icons/4dots.png) 100% 100% no-repeat;
+    background-size: cover;
+    clear: both;
 }
 
 .s-main__links-block {
@@ -636,9 +671,62 @@ td,
     padding: 0px 0px 0 7px;
 }
 
-
 .s-main__link-lock__item {
     padding-bottom: 17px;
+}
+
+.s-main__right-block {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+    padding: 12.7% 16.4% 0% 5%;
+}
+
+.very-small-text-header {
+    font-family: GothamProBold;
+    font-size: 8.72px;
+    text-transform: uppercase;
+    padding-bottom: 6px;
+}
+
+.small-text-header {
+    font-family: DinCondencedBold;
+    font-size: 20.13px;
+    padding-bottom: 24px;
+}
+
+.text-header {
+    font-family: DinCondencedBold;
+    font-size: 73.16px;
+    line-height: 72px;
+    padding-bottom: 20px;
+}
+
+.paragraph {
+    font-family: GothamPro;
+    font-size: 15.5px;
+    letter-spacing: 0px;
+    font-weight: 300;
+    line-height: 24px;
+    padding-bottom: 21px;
+}
+
+.button {
+    border: 4px solid #fff;
+    text-transform: uppercase;
+    background-color: transparent;
+    font-family: GothamPro;
+    color: white;
+    font-size: 17px;
+    font-weight: 500;
+    letter-spacing: 2px;
+    padding: 17px 38px;
+    cursor: pointer;
+}
+
+.block-with-right {
+    padding-top: 3px;
 }
  /* Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {
