--- a/css/style.css
+++ b/css/style.css
@@ -629,7 +629,7 @@ body {
     position: relative;
     background-color: #fdb14f;
     width: 100vw;
-    /* height: 100vh; */
+    min-height: 100vh;
     overflow: hidden;
 }
 
@@ -757,6 +757,20 @@ body {
     padding-top: 3px;
 }
 
+
+/* --------------------------- 
+-----------S-VACANCY----------
+-----------------------------
+*/
+
+.s-vacancy {
+    z-index: 0;
+    position: relative;
+    background-color: #c64045;
+    width: 100vw;
+    min-height: 100vh;
+    overflow: hidden;
+}
 
 
 
