(new) s-vacancy - minor changes

--- a/css/style.css
+++ b/css/style.css
@@ -750,6 +750,7 @@ body {
     font-weight: 500;
     letter-spacing: 2px;
     padding: 17px 38px;
+    text-decoration: none;
     cursor: pointer;
 }
 
