--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,11 @@
 }
 
 @font-face {
+    font-family: GothamProMedium;
+    src: url('./../fonts/GothamPro-Medium.ttf');
+}
+
+@font-face {
     font-family: DinCondencedBold;
     src: url('./../fonts/DinCondenced-Bold.otf');
 }
@@ -28,6 +33,10 @@
     src: url('./../fonts/GothamPro.ttf');
 }
 
+@font-face {
+    font-family: GothamProBlack;
+    src: url('./../fonts/GothamPro-Black.ttf');
+}
 
 * {
     font-family: Montserrat;
@@ -113,7 +122,7 @@ body {
     max-width: inherit;
     position: fixed;
     top: 0;
-    padding: 3.6% 0 60px 0px;
+    padding: 3.6% 0 0px 0px;
     line-height: 26px;
 }
 
@@ -774,12 +783,30 @@ body {
 }
 
 .s-vacancy__left-block {
-    padding: 10% 10% 0 10%;
+    padding: 9.1% 10% 0 9.6%;
     color: #fff;
 }
 
 .s-vacancy__header {
     color: inherit;
+    font-family: DinCondencedBold;
+    text-transform: uppercase;
+    font-size: 107px;
+    line-height: 114px;
+    letter-spacing: -6px;
+}
+
+.s-vacancy__subheader {
+    color: inherit;
+    font-family: GothamPro;
+    font-size: 20px;
+    padding: 24px 0 27px 4px;
+}
+
+.s-vacancy__category {
+    color: inherit;
+    font-family: GothamProMedium;
+    padding: 19px 4px 18px 5px;
 }
 
 .checkbox__input {
@@ -787,22 +814,26 @@ body {
 }
 
 .checkbox__label {
-    color: rgba(255, 255, 255, .7);
+    color: inherit;
+    font-family: GothamPro;
+    position: relative;
+    padding: 15px 0px 15px 51px;
 }
 
 .checkbox__label:before {
 	content: '';
-	display: inline-block;
-	background: #c64045;
-	left: 0;
-	top: 5px;
-	height: 20px;
-	width: 20px;
-	margin-right: 10px;
-	border-radius: 80%;
-	box-sizing: border-box;
-	border: 1px solid #fff;
-	transition: .3s ease-in-out;
+    display: inline-block;
+    background: #c64045;
+    position: absolute;
+    left: 0;
+    top: 6px;
+    height: 40px;
+    width: 40px;
+    margin-right: 10px;
+    border-radius: 80%;
+    box-sizing: border-box;
+    border: 1.5px solid #fff;
+    transition: .3s ease-in-out;
 }
 
 .checkbox__input:checked + .checkbox__label:before {
@@ -813,11 +844,60 @@ body {
 .checkbox__input + .checkbox__label {
     transition: color .7s ease;
     color: #fff;
-}
-.checkbox__input:checked + .checkbox__label {
-	color: #5D5D5D;
+    font-size: 20px;
 }
 
+.s-vacancy__additional {
+    ont-family: GothamPro;
+    font-size: 15px;
+    padding: 20px 0 20px 4px;
+}
+
+.s-vacancy__additional__link {
+    font-family: GothamProBlack;
+    text-decoration: none;
+    color: inherit;
+    font-size: 15px;
+}
+
+.s-vacancy__transitions {
+    padding-top: 10px;
+}
+
+.button-arrow {
+    color: inherit;
+    border: none;
+    background: transparent;
+    font-family: GothamPro;
+    font-size: 17px;
+    letter-spacing: 3px;
+    position: relative;
+}
+
+.button-arrow__right:before {
+    content: "";
+    position: absolute;
+    top: 8px;
+    right: -10px;
+    display: block;
+    width: 13px;
+    height: 1px;
+    transform: rotate(45deg);
+    background-color: #fff;
+    cursor: pointer;
+}
+
+.button-arrow__right:after {
+    content: "";
+    position: absolute;
+    top: 16px;
+    right: -10px;
+    display: block;
+    width: 13px;
+    height: 1px;
+    transform: rotate(-45deg);
+    background-color: #fff;
+}
 
 
  /* Extra small devices (portrait phones, less than 576px) */
